@@ -3,26 +3,13 @@
 
 prefs[:railsapps] = multiple_choice "Install an example application?", 
   [["No, let me build my own application", "none"], 
-  ["rails3-devise-rspec-cucumber", "rails3-devise-rspec-cucumber"], 
   ["rails3-bootstrap-devise-cancan", "rails3-bootstrap-devise-cancan"], 
+  ["rails3-devise-rspec-cucumber", "rails3-devise-rspec-cucumber"], 
   ["rails3-mongoid-devise", "rails3-mongoid-devise"],
   ["rails3-mongoid-omniauth", "rails3-mongoid-omniauth"],
   ["rails3-subdomains", "rails3-subdomains"]] unless prefs.has_key? :railsapps
 
 case prefs[:railsapps]
-  when 'rails3-devise-rspec-cucumber'
-    prefs[:database] = 'sqlite'
-    prefs[:templates] = 'erb'
-    prefs[:unit_test] = 'rspec'
-    prefs[:integration] = 'cucumber'
-    prefs[:fixtures] = 'factory_girl'
-    prefs[:frontend] = 'none'
-    prefs[:email] = 'gmail'
-    prefs[:authentication] = 'devise'
-    prefs[:devise_modules] = 'default'
-    prefs[:authorization] = 'none'
-    prefs[:starter_app] = 'users_app'
-    prefs[:form_builder] = 'none'
   when 'rails3-bootstrap-devise-cancan'
     prefs[:database] = 'sqlite'
     prefs[:templates] = 'erb'
@@ -36,6 +23,19 @@ case prefs[:railsapps]
     prefs[:devise_modules] = 'default'
     prefs[:authorization] = 'cancan'
     prefs[:starter_app] = 'admin_app'
+    prefs[:form_builder] = 'none'
+  when 'rails3-devise-rspec-cucumber'
+    prefs[:database] = 'sqlite'
+    prefs[:templates] = 'erb'
+    prefs[:unit_test] = 'rspec'
+    prefs[:integration] = 'cucumber'
+    prefs[:fixtures] = 'factory_girl'
+    prefs[:frontend] = 'none'
+    prefs[:email] = 'gmail'
+    prefs[:authentication] = 'devise'
+    prefs[:devise_modules] = 'default'
+    prefs[:authorization] = 'none'
+    prefs[:starter_app] = 'users_app'
     prefs[:form_builder] = 'none'
   when 'rails3-mongoid-devise'
     prefs[:database] = 'mongodb'
